[gd_scene load_steps=12 format=3 uid="uid://lx04whis2xmk"]

[ext_resource type="Script" uid="uid://b13351jeo8cj6" path="res://player/glitched_sword_attack.gd" id="1_scrye"]
[ext_resource type="AnimationLibrary" uid="uid://bj1th6ju1hoqv" path="res://player/assets/sword_animations.tres" id="2_843o8"]
[ext_resource type="AudioStream" uid="uid://ob83pnlnvbxq" path="res://assets/sfx/slash_1.wav" id="3_6d5sv"]
[ext_resource type="Texture2D" uid="uid://cwu5pnjidnl2e" path="res://player/assets/player_sprites.png" id="3_y3yij"]
[ext_resource type="AudioStream" uid="uid://dmqskriw1q14b" path="res://assets/sfx/slash_2.wav" id="4_4fmn0"]
[ext_resource type="SpriteFrames" uid="uid://vuja3ivahi8y" path="res://player/assets/sword_sprite_frames.tres" id="4_y3yij"]
[ext_resource type="AudioStream" uid="uid://yp8i53hc500i" path="res://assets/sfx/slash_3.wav" id="5_5jpok"]

[sub_resource type="Animation" id="Animation_843o8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3yij"]
_data = {
&"RESET": SubResource("Animation_843o8")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hafum"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("3_6d5sv")
stream_1/stream = ExtResource("4_4fmn0")
stream_2/stream = ExtResource("5_5jpok")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ir3hj"]
radius = 15.0828
height = 63.3767

[node name="GlitchedSwordAttack" type="Node2D"]
script = ExtResource("1_scrye")
knockback_strenght = 300.0
attack_animation = "attack_left"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y3yij"),
&"sword": ExtResource("2_843o8")
}
autoplay = "player_sword_animations/RESET"

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SwordSfxPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hafum")
volume_db = -4.0
max_distance = 288.0
panning_strength = 4.0
bus = &"SFX"

[node name="Sword" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.151276, 0.151276, 0.151276, 0.588235)
texture_filter = 1
position = Vector2(16, -8)
sprite_frames = ExtResource("4_y3yij")
animation = &"bugged"
autoplay = "bugged"
offset = Vector2(0, -24)

[node name="HitArea2D" type="Area2D" parent="Sword"]
unique_name_in_owner = true
position = Vector2(-1.90735e-06, -21)
rotation = -0.785397
collision_layer = 0
collision_mask = 64
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/HitArea2D"]
rotation = 0.785398
shape = SubResource("CapsuleShape2D_ir3hj")
debug_color = Color(0.994736, 0, 0.217211, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -32)
texture = ExtResource("3_y3yij")
hframes = 8
vframes = 11
frame = 72
region_rect = Rect2(485, 19, 421, 588)

[connection signal="timeout" from="DelayTimer" to="." method="on_delay_timeout"]
[connection signal="area_entered" from="Sword/HitArea2D" to="." method="_on_hit_area_2d_area_entered"]
